packages/cjs-to-esm/test/snapshots/package-corpus/core-js/stable/error/to-string.js
import parent from "../../es/error/to-string";
const _cjs_default = parent;
export default _cjs_default;
